--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="main.css">
     <script src="main.js" defer async></script>
     <script src="https://kit.fontawesome.com/1a6a486395.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/x-icon" href="image/i/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
     <!-- Header Section -->
@@ -42,7 +42,7 @@
     <div class="slideshow-inner">
         <div class="slide active">
             <div class="slide-image">
-                <a href="smartphone.html"><img src="image/i/banner-phone/banner-phone-480.png" alt="Mobile"></a>
+                <a href="smartphone.html"><img src="banner-phone-480.png" alt="Mobile"></a>
             </div>
             <div class="slide-description">
                 <h2>iPhone 16 pro max</h2>
@@ -55,7 +55,7 @@ get upto 30% off 🎉
         </div>
         <div class="slide">
             <div class="slide-image">
-                <a href="watch.html"><img src="image/i/banner-watch/banner-watch-480.png" alt="Watch"></a>
+                <a href="watch.html"><img src="banner-watch-480.png" alt="Watch"></a>
             </div>
             <div class="slide-description">
                 <h2>Smartwatches
@@ -82,32 +82,32 @@ Get upto 45% off</pre>
     <div class="category-grid">
 
         <div class="category-card">
-            <a href="smartphone.html"><img src="image/i/category-phone/category-phone-480.png" alt="Mobile"></a>
+            <a href="smartphone.html"><img src="category-phone-480.png" alt="Mobile"></a>
             <h3>Mobile</h3>
         </div>
         <div class="category-card">
-            <a href="watch.html"><img src="image/i/products/imresizer-1735322926591.png" alt="Watch"></a>
+            <a href="watch.html"><img src="watch1.png" alt="Watch"></a>
             <h3>Watch</h3>
         </div>
         <div class="category-card">
-            <a href="laptop.html"><img src="image/i/category-laptop/category-laptop-480.png" alt="Laptop"></a>
+            <a href="laptop.html"><img src="category-laptop-480.png" alt="Laptop"></a>
             <h3>Laptop</h3>
         </div>
         <div class="category-card">
-            <a href="gaming.html"><img src="image/i/category-xbox/category-xbox-480.png" alt="Gaming Console"></a>
+            <a href="gaming.html"><img src="category-xbox-480.png" alt="Gaming Console"></a>
             <h3>Gaming Console</h3>
         </div>
         
         <div class="category-card">
-            <a href="drive.html"><img src="image/i/category-drive/drive.png" alt="Storage Drives"></a>
+            <a href="drive.html"><img src="drive.png" alt="Storage Drives"></a>
             <h3>Storage Drives</h3>
         </div>
         <div class="category-card">
-            <a href="speaker.html"><img src="image/i/products/product-spaker-1.png" alt="Speakers"></a>
+            <a href="speaker.html"><img src="product-spaker-1.png" alt="Speakers"></a>
             <h3>Speakers</h3>
         </div>
         <div class="category-card">
-            <a href="essentials.html"><img src="image/i/banner-hair-dryer/banner-hair-dryer-480.png" alt="Daily Essentials"></a>
+            <a href="essentials.html"><img src="/banner-hair-dryer-480.png" alt="Daily Essentials"></a>
             <h3>Daily Essentials</h3>
         </div>
         <!-- Add more categories as needed -->
@@ -119,19 +119,19 @@ Get upto 45% off</pre>
     <h2>Featured Products</h2>
     <div class="product-grid">
         <div class="product-card">
-            <img src="image/i/category-phone/category-phone-480.png" alt="Mobile">
+            <img src="category-phone-480.png" alt="Mobile">
             <h3>iPhone 14 pro max</h3>
-            <p>Product 1 Description...</p>
+<!--             <p>Product 1 Description...</p> -->
             <button onclick="window.location.href='smartphone.html'">Buy Now</button>
         </div>
         <div class="product-card">
-            <img src="image/i/products/product-spaker-1.png" alt="Speaker">
+            <img src="product-spaker-1.png" alt="Speaker">
             <h3>JBL Speaker</h3>
-            <p>Product 2 Description...</p>
+<!--             <p>Product 2 Description...</p> -->
             <button onclick="window.location.href='speaker.html'">Buy Now</button>
         </div>
         <div class="product-card">
-            <img src="image/i/products/product-grinder-1.png" alt="Grinder">
+            <img src="product-grinder-1.png" alt="Grinder">
             <h3>Mixer</h3>
             <p>Product 2 Description...</p>
             <button onclick="window.location.href='essentials.html'">Buy Now</button>
