--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Get upto 45% off</pre>
             <h3>Speakers</h3>
         </div>
         <div class="category-card">
-            <a href="essentials.html"><img src="/banner-hair-dryer-480.png" alt="Daily Essentials"></a>
+            <a href="essentials.html"><img src="banner-hair-dryer-480.png" alt="Daily Essentials"></a>
             <h3>Daily Essentials</h3>
         </div>
         <!-- Add more categories as needed -->
