--- a/confirm.html
+++ b/confirm.html
@@ -37,7 +37,7 @@
             <div class="confirmation-message">
                 <h3>Thank you for your order!</h3>
                 <p>We're thrilled that you chose us. Your order is being processed, and you'll receive a separate email with all the details.</p>
-                <button onclick="generateNewTicket()">Generate New Ticket (For Fun!)</button>
+<!--                 <button onclick="generateNewTicket()">Generate New Ticket (For Fun!)</button> -->
             </div>
         </div>
     </div>
