--- a/pay.html
+++ b/pay.html
@@ -70,7 +70,7 @@
                 <input type="checkbox" id="terms" name="terms" required>
                 <label for="terms">I agree to the <a href="#">Terms & Conditions</a></label>
             </div>
-            <button onclick="window.location.href='confirm.html'" type="submit" class="submit-btn" >Proceed to Pay</button>
+            <button onclick="window.location.href='confirm.html'" type="submit" class="submit-btn" ><a href="confirm.html">Proceed to Pay</a></button>
         </form>
     </div>
 </body>
